tests/snapshots/error_reporting__error_invalid_aliases_type.snap
---
source: tests/error_reporting.rs
expression: error
---
  x parse IDL source
  |-> parse `<input>`
  `-> @aliases must contain an array of strings
   ,-[<input>:4:13]
 3 |         protocol P {
 4 |             @aliases(123) record R { string name; }
   :             ^^^^^^|^^^^^^
   :                   `-- @aliases must contain an array of strings
 5 |         }
   `----
