tests/snapshots/error_reporting__error_invalid_order_value.snap
---
source: tests/error_reporting.rs
expression: error
---
  x parse `<input>`
  `-> @order must be ASCENDING, DESCENDING, or IGNORE, got: BAD
   ,-[<input>:5:24]
 4 |             record R {
 5 |                 string @order("BAD") x;
   :                        |
   :                        `-- @order must be ASCENDING, DESCENDING, or IGNORE, got: BAD
 6 |             }
   `----
