tests/snapshots/error_reporting__error_malformed_fixed_size.snap
---
source: tests/error_reporting.rs
expression: error
---
  x parse IDL source
  `-> line 1:33 unexpected token `)`
   ,-[<input>:1:34]
 1 | protocol P { fixed F(not_a_number); }
   :                                  |
   :                                  `-- unexpected `)`
   `----
