tests/snapshots/error_reporting__error_malformed_union.snap
---
source: tests/error_reporting.rs
expression: error
---
  x parse IDL source
  `-> line 1:37 unexpected token `,`
   ,-[<input>:1:38]
 1 | protocol P { record R { union { int, , string } x; } }
   :                                      |
   :                                      `-- unexpected `,`
   `----
  help: expected one of: protocol, namespace, import, idl, schema, enum,
        fixed, error, record, array, map, union, boolean, int, long, float,
        double, string, bytes, null, true, false, decimal, date, time_ms,
        timestamp_ms, local_timestamp_ms, uuid, void, oneway, throws, @,
        identifier
