tests/snapshots/error_reporting__error_missing_enum_commas.snap
---
source: tests/error_reporting.rs
expression: error
---
  x parse IDL source
  `-> line 1:24 unexpected 'B' expected '}' or ','
   ,-[<input>:1:25]
 1 | protocol P { enum E { A B C } }
   :                         |
   :                         `-- line 1:24 unexpected 'B' expected '}' or ','
   `----

Error: 
  x line 1:28 mismatched input '}' expecting '(' (annotations require
  | `@name(value)` syntax)
   ,-[<input>:1:29]
 1 | protocol P { enum E { A B C } }
   :                             |
   :                             `-- line 1:28 mismatched input '}' expecting '(' (annotations require `@name(value)` syntax)
   `----

Error: 
  x line 1:30 unexpected '}' expected end of file
   ,-[<input>:1:31]
 1 | protocol P { enum E { A B C } }
   :                               |
   :                               `-- line 1:30 unexpected '}' expected end of file
   `----
