tests/snapshots/error_reporting__error_missing_field_separator.snap
---
source: tests/error_reporting.rs
expression: error
---
  x parse IDL source
  `-> line 1:30 mismatched input 'int' expecting {';', ','}
   ,-[<input>:1:31]
 1 | protocol P { record R { int x int y; } }
   :                               ^|^
   :                                `-- line 1:30 mismatched input 'int' expecting {';', ','}
   `----
