tests/snapshots/error_reporting__error_missing_fixed_size.snap
---
source: tests/error_reporting.rs
expression: error
---
  x parse IDL source
  `-> line 1:20 no viable alternative at input 'fixedF;'
   ,-[<input>:1:21]
 1 | protocol P { fixed F; }
   :                     |
   :                     `-- line 1:20 no viable alternative at input 'fixedF;'
   `----
