tests/snapshots/error_reporting__error_missing_record_name.snap
---
source: tests/error_reporting.rs
expression: error
---
  x parse IDL source
  `-> line 1:20 no viable alternative at input 'record{'
   ,-[<input>:1:21]
 1 | protocol P { record { int x; } }
   :                     |
   :                     `-- line 1:20 no viable alternative at input 'record{'
   `----
