tests/snapshots/error_reporting__error_missing_semicolon.snap
---
source: tests/error_reporting.rs
expression: error
---
  x line 1:30 mismatched input '}' expecting {';', ','}
   ,-[<input>:1:31]
 1 | protocol P { record R { int x } }
   :                               |
   :                               `-- line 1:30 mismatched input '}' expecting {';', ','}
   `----
