tests/snapshots/error_reporting__error_misspelled_keyword.snap
---
source: tests/error_reporting.rs
expression: error
---
  x parse IDL source
  `-> line 1:0 unexpected token `protocl`
   ,-[<input>:1:1]
 1 | protocl P { record R { int x; } }
   : ^^^|^^^
   :    `-- unexpected `protocl`
   `----
  help: expected one of: protocol, namespace, import, schema, enum, fixed,
        error, record, @
